- Improved Factions & Guilds page (Patreon exclusive)
    - List of Guild missions
    - Displays title & description possibilities
- Fix cart quantities always being zero
    - Fixes total unit count issue
    - Fixes all required materials list error
    - Fixes all required materials tree error
- Added new logging mechanism
    - Better debugging 
    - Ability to view logs (from settings page)
        - To be used when submitting bugs
- Better contrast on buttons and chips
- Add new guide by Bobba fett


For more details on this update please visit the "What is New" page in the Apps or on the website
