@@ -5,7 +5,7 @@
 	"image": "enterPortalAddress.jpg",
 	"author": "KaeAl",
 	"minutes": 20,
-	"date": "2019-09-22",
+	"date": "2019-09-22T20:52:08.874Z",
 	"tags": [
 		"Portal",
 		"Glyph"
