@@ -11,7 +11,7 @@
 	],
 	"sections": [
 		{
-			"heading": "",
+			"heading": "S Class freighter",
 			"items": [
 				{
 					"type": "text",
