@@ -18,8 +18,8 @@ dependencies:
 
   # AssistantApps
   assistantapps_flutter_common:
-    git: https://github.com/AssistantApps/Flutter.Common.git
-    # path: 'C:\Development\Projects\AssistantApps\assistantapps_flutter_common'
+    # git: https://github.com/AssistantApps/Flutter.Common.git
+    path: 'C:\Development\Projects\AssistantApps\assistantapps_flutter_common'
 
   # Firebase
   firebase_core: 1.13.1
