@@ -11,6 +11,7 @@
         - To be used when submitting bugs
 - Better contrast on buttons and chips
 - Add new guide by Bobba fett
+- Fix zooming in on Guide images
 
 
 For more details on this update please visit the "What is New" page in the Apps or on the website
